--- a/app/src/main/res/layout/image_text.xml
+++ b/app/src/main/res/layout/image_text.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_purple"
+    android:background="@color/colorPrimaryDark"
     android:orientation="horizontal">
 
     <ImageView
@@ -21,7 +21,7 @@
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:textColor="#000000"
+        android:textColor="#f00000"
         android:visibility="gone" />
 
 </RelativeLayout>
