--- a/app/src/main/res/layout/image_text.xml
+++ b/app/src/main/res/layout/image_text.xml
@@ -8,17 +8,18 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        />
 
     <TextView
         android:id="@+id/caption"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:textColor="#f00000"
