grid view added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,8 +75,9 @@
     <RelativeLayout
         android:id="@+id/bottombuttonrellayout"
         android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_weight="1">
+        android:layout_height="400dp"
+        android:layout_weight="1"
+        android:visibility="visible">
 
         <ImageButton
             android:id="@+id/add"
@@ -106,6 +107,45 @@
             android:layout_centerHorizontal="true"
             android:onClick="cropper"
             app:srcCompat="@android:drawable/ic_menu_crop" />
+
+        <RelativeLayout
+            android:id="@+id/showimgcaplayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/add"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/showimg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/caption_show"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                />
+
+            <ImageButton
+                android:id="@+id/close_show_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/showimg"
+                android:onClick="closeView"
+                app:srcCompat="@android:drawable/btn_dialog" />
+
+            <TextView
+                android:id="@+id/caption_show"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_toLeftOf="@+id/close_show_view"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+
+        </RelativeLayout>
     </RelativeLayout>
 
 </LinearLayout>
