--- a/app/src/main/res/layout/image_text.xml
+++ b/app/src/main/res/layout/image_text.xml
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/caption"
-        android:layout_width="80dp"
+        android:layout_width="wrap_content"
         android:layout_height="80dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
